# autodiff

./: CMakeLists.txt  README.md
include/: dual.h  dual2.h
src/: test_forward_scalar.cpp
